# bit_IO

./: Makefile  README.md  bit_io.ipynb  pyproject.toml  setup.py
src/: bit_IO.ipynb
src/bit_IO/: Makefile  bit_IO.ipynb  bit_IO.py
